--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p class="card-text">Казань, р-н Ново-Савиновский</p>
             <p class="card-text">10 июля 11:39</p>
           </div>
-        <!-- /.card -->
+          <!-- /.card -->
           <div class="card">
             <a href="#" class="card-link">
             <img src="./img/card-image2.jpg" alt="photo" class="card-image">
@@ -118,7 +118,7 @@
             </a>
             <div class="card-header">
               <a href="#" class="card-link">
-              <h3 class="card-title">Двухсторонняя ветровка <br>для мальчика</h3>
+              <h3 class="card-title">Двухсторонняя ветровка для мальчика</h3>
               </a>
               <button class="like">
                 <img src="./img/like.svg" alt="like">
@@ -195,7 +195,7 @@
           </div>
       </main>
       <!-- блок с боковой навигацией -->
-      <aside class="sibeda">
+      <aside class="sibebar">
         <h4 class="page-title">Сервисы и услуги</h4>
         <div class="service">
           <img src="./img/shipping.svg" alt="icon: shipping" class="service-image">
