Сверстал страницу объявления

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2 class="page-title">Рекомендации для вас</h2>
         <div class="cards">
           <div class="card">
-            <a href="#" class="card-link">
+            <a href="single.html" class="card-link">
             <img src="img/card-image.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
@@ -93,7 +93,7 @@
           </div>
           <!-- /.card -->
           <div class="card">
-            <a href="#" class="card-link">
+            <a href="single.html" class="card-link">
             <img src="./img/card-image2.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
@@ -113,7 +113,7 @@
           </div>
           <!-- /.card -->
           <div class="card">
-            <a href="#" class="cadr-link">
+            <a href="single.html" class="cadr-link">
             <img src="./img/card-imag3.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
@@ -133,7 +133,7 @@
           </div>
           <!-- /.card -->
           <div class="card">
-            <a href="#" class="card-link">
+            <a href="single.html" class="card-link">
             <img src="./img/card-imag4.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
@@ -157,7 +157,7 @@
             <img src="./img/card-imag5.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
-              <a href="#" class="card-link">
+              <a href="single.html" class="card-link">
               <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
               </a>
               <button class="like">
@@ -173,7 +173,7 @@
           </div>
           <!-- /.card -->
           <div class="card">
-            <a href="#" class="card-link">
+            <a href="single.html" class="card-link">
             <img src="./img/card-imag6.jpg" alt="photo" class="card-image">
             </a>
             <div class="card-header">
